# leafy-ils-fast

./: .gitignore  127064583.rdf  Dockerfile  README.md  auth.py  data.py  fly.toml  justfile  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt  response_1730711373960.xml  tailwind.config.js  test.db  test.rdf  test2.rdf
.github/workflows/: python-app.yml
app/: books.py  users.py
app/admin/: __init__.py  views.py
app/routers/: book.py
backend/: config.py  database.py  dbadmin.py  main.py  models.py  users.py
backend/internals/: book_notice.py  book_record.py  constants.py  emails.py  table_management.py
backend/routers/: book.py  circulation.py  family.py  member.py  records.py
backend/unit_tests/: conftest.py  test_book_create.py  test_book_delete.py  test_book_read_all.py  test_book_read_one.py  test_book_update.py  test_circulation_create.py  test_circulation_delete.py  test_circulation_read_all.py  test_circulation_read_one.py  test_circulation_update.py  test_family_create.py  test_family_delete.py  test_family_read_all.py  test_family_read_one.py  test_family_update.py  test_member_create.py  test_member_delete.py  test_member_read_all.py  test_member_update.py  (+2 more)
design/: api_design.md  database_details.md  project_description.md  python_design.md  tools_selection.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
templates/: _site_map.html  acticle_card.jinja  base.html  base2.html  book_add.html  book_card.jinja  index.html  login.html  private.html
(+63 files in other folders)
