[tool.poetry]
name = "leafy-ils"
version = "0.1.0"
description = "A small ILS"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
sqlmodel = "^0.0.22"
pydantic-extra-types = "^2.10.0"
pycountry = "^24.6.1"
devtools = "^0.12.2"
rdflib = "^7.1.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
